--- a/07_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/07_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -25,7 +25,11 @@
     <link rel="canonical" href="@ViewBag.WebsiteUrl" />
 }
 <div class="content">
-    @Html.Partial("_partial/_HomeSlide_1");
+    @if (!Request.Browser.IsMobileDevice)
+    {
+        Html.RenderPartial("_partial/_HomeSlide_1");
+    }
+    
     <div class="container">
         <div class="row">
             <section class="top-cate col-md-12">
@@ -33,14 +37,14 @@
                 <div class="col-md-3">
                     <div class="wp1">
                         <h2 class="divider" style="margin-top: 8px; margin-bottom: 30px;"><a href="/"> Kiến trúc, nội thất &amp; xây dựng</a></h2>
-                        <p>10 năm kinh nghiệm trong ngành kiến trúc, nội thất và xây dựng, với hàng trăm khách hàng mỗi năm, Wonder là một công ty danh tiếng và đáng tin cậy trong việc cung cấp dịch vụ cho khách hàng tư nhân và doanh nghiệp.</p>
+                        <p>10 năm kinh nghiệm trong ngành kiến trúc, nội thất và xây dựng, với hàng trăm khách hàng mỗi năm, chúng tôi khẳng định là một công ty danh tiếng và đáng tin cậy trong việc cung cấp dịch vụ cho khách hàng tư nhân và doanh nghiệp.</p>
                     </div>
 
                 </div>
                 <div class="col-md-3">
                     <div class="wp1">
                         <div class="imgct">
-                            <a href="/"><img src="http://wonder.vn/wp-content/uploads/2015/12/w-12-300x212.jpg"></a>
+                            <a href="/"><img src="http://media.anpero.com/images/42/112017/112017112312492882.jpg"></a>
                             <h2>Trang trí nội thất</h2>
 
                         </div>
@@ -50,7 +54,7 @@
                 <div class="col-md-3">
                     <div class="wp1">
                         <div class="imgct">
-                            <a href="/"><img src="http://wonder.vn/wp-content/uploads/2015/12/w-12-300x212.jpg"></a>
+                            <a href="/"><img src="http://media.anpero.com/images/42/112017/222017112312495625.jpg"></a>
                             <h2>Xây dựng</h2>
                         </div>
                         <p>Hoạt động xây dựng bao gồm lập quy hoạch, dự án đầu tư công trình, khảo sát, thiết kế xây dựng, thi công, giám sát, quản lý dự án đầu tư, lựa chọn nhà thầu và các hoạt động khác có liên quan đến xây dựng.</p>
@@ -59,7 +63,7 @@
                 <div class="col-md-3">
                     <div class="wp1">
                         <div class="imgct">
-                            <a href="/"><img src="http://wonder.vn/wp-content/uploads/2015/12/w-12-300x212.jpg"></a>
+                            <a href="/"><img src="http://media.anpero.com/images/42/112017/332017112312532026.jpg"></a>
                             <h2>Kiến trúc</h2>
 
                         </div>
@@ -105,7 +109,7 @@
                         <div class="col-xs-12 col-sm-3 xs-bottom-40 wow fadeIn" style="">
                             <div class="single-price">
                                 <div class="price-header">
-                                    <img src="http://wonder.vn/wp-content/uploads/2015/12/w-12-300x212.jpg" alt="price">
+                                    <img src="http://media.anpero.com/images/42/112017/112017112312492882.jpg" alt="price">
                                     <div class="price-plan">
                                         <div class="price-title">
                                             <h3>Trọn gói</h3>
@@ -145,7 +149,7 @@
                         <div class="col-xs-12 col-sm-3 xs-bottom-40 wow fadeIn" style="visibility: visible; animation-name: fadeIn;">
                             <div class="single-price">
                                 <div class="price-header">
-                                    <img src="http://wonder.vn/wp-content/uploads/2015/12/w-12-300x212.jpg" alt="price">
+                                    <img src="http://media.anpero.com/images/42/112017/222017112312495625.jpg" alt="price">
                                     <div class="price-plan">
                                         <div class="price-title">
                                             <h3>Kiến trúc</h3>
@@ -186,7 +190,7 @@
                         <div class="col-xs-12 col-sm-3 wow fadeIn" style="visibility: visible; animation-name: fadeIn;">
                             <div class="single-price">
                                 <div class="price-header">
-                                    <img src="http://wonder.vn/wp-content/uploads/2015/12/w-12-300x212.jpg" alt="price">
+                                    <img src="http://media.anpero.com/images/42/112017/332017112312532026.jpg" alt="price">
                                     <div class="price-plan">
                                         <div class="price-title">
                                             <h3>Nội thất</h3>
@@ -228,7 +232,7 @@
                         <div class="col-xs-12 col-sm-3 wow fadeIn" style="visibility: visible; animation-name: fadeIn;">
                             <div class="single-price">
                                 <div class="price-header">
-                                    <img src="http://wonder.vn/wp-content/uploads/2015/12/w-12-300x212.jpg" alt="price">
+                                    <img src="http://media.anpero.com/images/42/112017/332017112312532026.jpg" alt="price">
                                     <div class="price-plan">
                                         <div class="price-title">
                                             <h3>MIẼN PHÍ</h3>
