--- a/07_Shop_MultiProduct/assets/stylesheet/revslider-v2.css
+++ b/07_Shop_MultiProduct/assets/stylesheet/revslider-v2.css
@@ -48,7 +48,8 @@ website:   	http://www.themesmart.net/
 
 #thm-mart-slideshow .container { padding:0px; width:100%; }
 #thm-mart-slideshow .container img {
-	border-radius: 3px
+	border-radius: 3px;
+    width:100%; 
 }
 #thm-mart-slideshow .home-slider {
 	width: 66.6%;
