--- a/07_Shop_MultiProduct/Views/Product/List.cshtml
+++ b/07_Shop_MultiProduct/Views/Product/List.cshtml
@@ -65,10 +65,10 @@
                     <h2>Sản phẩm</h2>
                 </div>
             </div>
-            <section class="main-container col2-left-layout bounceInUp animated">
+            <section class="main-container animated">
                 <div class="container">
                     <div class="row">
-                        <div class="col-main col-sm-9 col-sm-push-3">
+                        <div class="col-main col-sm-12">
                             <div class="pro-coloumn">
                                 <article class="col-main">
                                     <div class="toolbar">
@@ -100,55 +100,55 @@
                                         }
                                     </div>
                                     <div class="category-products">
-                                        <ol class="products-list" id="products-list">
+                                        <ol class="products-grid" id="products-list">
                                             @foreach (AnperoFrontend.WebService.ProductItem item in productList.Item)
                                             {
-                                                <li class="item first">
-                                                    <div class="product-image">
-                                                        <a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)" title="@item.PrName">
-                                                            <img class="small-image" src="@item.Images" alt="@item.PrName">
-                                                        </a>
-                                                    </div>
-                                                    <div class="product-shop">
-                                                        <h2 class="product-name">
-                                                            <a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)" title="@item.PrName">@item.PrName</a>
-                                                        </h2>
-                                                        <div class="ratings">
-                                                            <div class="rating-box">
-                                                                <div style="width:50%" class="rating"></div>
+                                                <li class="item col-lg-3 col-md-3 col-sm-4 col-xs-6">
+                                                    <div class="item-inner">
+                                                        <div class="item-img">
+                                                            <div class="item-img-info">
+                                                                <a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)" title="@item.PrName" class="product-image">
+                                                                    <img class="small-image" src="@item.Images" alt="@item.PrName">
+                                                                </a>
+                                                                <div class="item-box-hover">
+                                                                    <div class="box-inner">
+                                                                        <div class="product-detail-bnt"><a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)" class="button detail-bnt"><span>Chi tiết</span></a></div>
+                                                                    </div>
+                                                                </div>
                                                             </div>
-                                                            <p class="rating-links"> <a href="#/review/product/list/id/167/category/35/">1 Nhận xét</a> <span class="separator">|</span> <a href="#review-form">Thêm nhận xét</a> </p>
                                                         </div>
-                                                        <div class="desc std">
-                                                            <p>
-                                                                @item.ShortDesc
-                                                            </p>
-                                                            <p>
-                                                                <a class="link-learn" title="" href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)">Chi tiết</a>
-                                                            </p>
-                                                        </div>
-                                                        <div class="price-box">
-                                                            @if (item.IsSale)
-                                                            {
-                                                                <p class="old-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span> </p>
-                                                                <p class="special-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) đ</span> </p>
-                                                            }
-                                                            else
-                                                            {
-                                                                <p><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span> </p>
+                                                        <div class="item-info">
+                                                            <div class="info-inner">
+                                                                <div class="item-title">
+                                                                    <a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)" title="@item.PrName">@item.PrName</a>
+                                                                </div>
+                                                                <div class="item-content">
+                                                                    <div class="item-price">
+                                                                        <div class="price-box">@if (item.IsSale)
+                                                                        {
+                                                                            <p class="old-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span> </p>
+                                                                            <p class="special-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) đ</span> </p>
+                                                                        }
+                                                                        else
+                                                                        {
+                                                                            <p><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span> </p>
 
-                                                            }
+                                                                        }</div>
+                                                                    </div>
+                                                                    <div class="add_cart">
+                                                                        <button class="button btn-cart ajx-cart" title="Mua ngay" type="button" onclick="Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName');"><span>Đặt mua</span></button>
+                                                                        @*<span class="add-to-links">
+                                                                            <button class="button btn-cart ajx-cart" title="Mua ngay" type="button" onclick="Cart.addProduct3(@item.Id,@item.Price,'@item.Images','@item.PrName');"><span>Thêm vào giỏ hàng</span></button>
 
-                                                        </div>
-                                                        <div class="actions">
-                                                            <button class="button btn-cart ajx-cart" title="Mua ngay" type="button" onclick="Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName');"><span>Mua ngay</span></button>
-                                                            <span class="add-to-links">
-                                                                <button class="button btn-cart ajx-cart" title="Mua ngay" type="button" onclick="Cart.addProduct3(@item.Id,@item.Price,'@item.Images','@item.PrName');"><span>Thêm vào giỏ hàng</span></button>
-
-                                                            </span>
+                                                                        </span>*@
+                                                                    </div>
+                                                                </div>
+                                                            </div>
                                                         </div>
                                                     </div>
+
                                                 </li>
+                                           
                                             }
                                         </ol>
                                     </div>
@@ -180,7 +180,7 @@
                                 </article>
                             </div>
                         </div>
-                        <aside class="col-left sidebar col-sm-3 col-xs-12 col-sm-pull-9 wow bounceInUp animated">
+                        @*<aside class="col-left sidebar col-sm-3 col-xs-12 col-sm-pull-9 wow bounceInUp animated">
                             @if (ViewData["saleProduct"] != null)
                             {
                                 AnperoFrontend.WebService.ProductItem[] saleProduct = (AnperoFrontend.WebService.ProductItem[])ViewData["saleProduct"];
@@ -337,7 +337,7 @@
                                     }
                                 }
                             </div>
-                        </aside>
+                        </aside>*@
 
                     </div>
 
