--- a/07_Shop_MultiProduct/assets/stylesheet/style.css
+++ b/07_Shop_MultiProduct/assets/stylesheet/style.css
@@ -3796,7 +3796,6 @@ ul.pdt-list li.item a img.image-hover {
 
         .products-grid .item .item-inner .item-img {
             position: relative;
-            border: 1px #eaeaea solid;
         }
 
             .products-grid .item .item-inner .item-img .ico-product {
@@ -3993,6 +3992,7 @@ ul.pdt-list li.item a img.image-hover {
             font-size: 12px;
             overflow: hidden;
             letter-spacing: 0.5px;
+            min-height:60px;
         }
 
             .products-grid .item .item-inner .item-info .info-inner .item-title a {
@@ -8166,11 +8166,12 @@ ol#compare-items li {
 .toolbar {
     clear: both;
     margin-top: 0px;
-    padding: 20px 25px;
+    padding: 10px;
     display: inline-block;
     width: 100%;
     padding-top: 0px;
     border-bottom: #ececec double;
+    margin:-10px 0 10px 0;
 }
 
     .toolbar .sorter {
